# flask-app

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
assets/: documentation.md
assets/diagrammesCode/: AffaireStateChaining.puml
assets/diagramsBackend/database/: models.diagrame.puml
backend/: App.py  Dockerfile  Untitled.ipynb  __init__.py  pyproject.toml  requirements.txt
backend/config/: settings.py
backend/migrations/versions/: 471f3b428f0f_added_location_model.py  4e0a17498c11_added_location_model_and_updated_.py  621f364c81fd_.py  7246633b5ee2_initial_migration.py  dcd285fb9c0e_make_affaire_name_variable_unique.py  e1b724d1b114_update_affaire_model_to_enforce_.py  f0ea55ed68cd_added_user_affaire_relationship.py
backend/models/: __init__.py  affaire.py  base.py  commune.py  departement.py  locations.py  user.py
backend/notebooks/: test.ipynb
backend/scripts/: __init__.py  import_data.py  initialize_db.py  print_data.py  recreate_database.py
backend/services/: database_service.py
backend/test/: test_database.py  test_endPointAndDataIntegration.py
backend/validation/: __init__.py  validationAffaireSchema.py
db/: Dockerfile
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: AffaireForm.jsx  HomePage.js
